+chain answers result

--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -32,6 +32,10 @@
                 <a class="nav-link" href="/q">Соревнования</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/q/marking">Результаты</a>
+            </li>
+            
+            <li class="nav-item">
                 {% if user.is_authenticated %}
                 
                 <li><a class="nav-link" href="{% url 'logout'%}?next={{request.path}}">Выйти</a></li>   
