--- a/quiz/templates/progress.html
+++ b/quiz/templates/progress.html
@@ -19,7 +19,7 @@
 		<th>{% trans "Category" %}</th>
 		<th>{% trans "Correctly answererd" %}</th>
 		<th>{% trans "Incorrect" %}</th>
-		<th>%</th>
+		
 	  </tr>
 	</thead>
 
@@ -31,7 +31,7 @@
 		<td>{{ cat }}</td>
 		<td>{{ value.0 }}</td>
 		<td>{{ value.1 }}</td>
-		<td>{{ value.2 }}</td>
+		
 	  </tr>
 
 	  {% endfor %}
@@ -47,7 +47,7 @@
 
   <hr>
 
-  <h1>{% trans "Previous exam papers" %}</h1>
+  <h1>{% trans "Результаты предыдущих соревнований" %}</h1>
   <p class="lead">
 	{% trans "Below are the results of exams that you have sat." %}
   </p>
@@ -59,7 +59,7 @@
 		<th>{% trans "Quiz Title" %}</th>
 		<th>{% trans "Score" %}</th>
 		<th>{% trans "Possible Score" %}</th>
-		<th>%</th>
+		
 	  </tr>
 	</thead>
 
@@ -71,7 +71,7 @@
 		<td>{{ exam.quiz.title }}</td>
 		<td>{{ exam.current_score }}</td>
 		<td>{{ exam.get_max_score }}</td>
-		<td>{{ exam.get_percent_correct }}</td>
+		
 	  </tr>
 
 	  {% endfor %}
