--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -34,7 +34,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/q/marking">Результаты</a>
             </li>
-            
+            <li class="nav-item">
+                <a class="nav-link" href="/admin">Панель администратора</a>
+            </li>
             <li class="nav-item">
                 {% if user.is_authenticated %}
                 
