--- a/news/templates/news/post.html
+++ b/news/templates/news/post.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="container">
-  <h5 class="text-info">{{articles.title}}</h5>
-  <h6 class="text-info">{{articles.date|date:"d-m-Y в H:i:s"}}</h6>
-  <p>{{articles.post|safe|linebreaks}}</p>
+  <h5 class="text-info">{{article.title}}</h5>
+  <h6 class="text-info">{{article.date|date:"d-m-Y в H:i:s"}}</h6>
+  <p>{{article.post|safe|linebreaks}}</p>
 </div>
 {% endblock %} 
