--- a/quiz/templates/result.html
+++ b/quiz/templates/result.html
@@ -29,9 +29,9 @@
   {% if max_score %}
 
   <div>
-	<h2>{% trans "Exam results" %}</h2>
+	<h2>{% trans "Результаты соревнования" %}</h2>
 	<p>
-	  <small class="muted">{% trans "Exam title" %}: </small>
+	  <small class="muted">{% trans "Название соревнования" %}: </small>
 	  <strong>{{ quiz.title }}</strong></p>
 
 	<p class="lead">
