--- a/quiz/templates/quiz/quiz_list.html
+++ b/quiz/templates/quiz/quiz_list.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "All Quizzes" %}{% endblock %}
 
 {% block content %}
-<h2>{% trans "List of quizzes" %}</h2>
+<h2>{% trans "Список соревнований" %}</h2>
     {% if quiz_list %}
 		<table class="table table-bordered table-striped">
 
