--- a/quiz/templates/quiz/sitting_list.html
+++ b/quiz/templates/quiz/sitting_list.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "All Quizzes" %}{% endblock %}
 
 {% block content %}
-<h2>{% trans "List of complete exams" %}</h2>
+<h2>{% trans "Результаты соревнования" %}</h2>
     {% if sitting_list %}
 
 		<table class="table table-bordered table-striped">
